fix: change how to access cells to match JDK 8 preference